--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "1.24.0",
-    "dotenv": "^16.4.5",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
+    "express": "^5.2.1",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^20.11.24",
     "@types/yargs": "^17.0.32",
     "typescript": "^5.3.3"
